--- a/PureToneAudiometer/packages.config
+++ b/PureToneAudiometer/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Caliburn.Micro" version="1.5.0" targetFramework="wp80" />
+  <package id="Caliburn.Micro.BindableAppBar" version="1.0.3.0" targetFramework="wp80" />
   <package id="Rx-Core" version="2.1.30214.0" targetFramework="wp80" />
   <package id="Rx-Interfaces" version="2.1.30214.0" targetFramework="wp80" />
   <package id="Rx-Linq" version="2.1.30214.0" targetFramework="wp80" />
