BUG: Playback seems to have stopped working for whatever reason (?), got to fix it.
Created the new styles and control templates, now it's possible to create round glyph button.

Changed the HearingTestView.xaml to be more flexible and universal. There's a progress bar, also introduced IReadOnlyTraversableCollection.cs to be able to go back and forth on frequencies.

--- a/PureToneAudiometer/PureToneAudiometer.csproj
+++ b/PureToneAudiometer/PureToneAudiometer.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Audio\WaveFormat.cs" />
     <Compile Include="Events.cs" />
     <Compile Include="IAsyncXmlFileManager.cs" />
+    <Compile Include="IReadOnlyTraversableCollection.cs" />
     <Compile Include="LocalizedStrings.cs" />
     <Compile Include="Plotting.cs" />
     <Compile Include="TriggeredBooleanToVisibilityConverter.cs" />
@@ -291,6 +292,8 @@
     <Reference Include="Caliburn.Micro.Extensions">
       <HintPath>..\packages\Caliburn.Micro.1.5.1\lib\wp8\Caliburn.Micro.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Live, Version=5.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.Live.Controls, Version=5.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Phone.Controls, Version=8.0.0.0, Culture=neutral, PublicKeyToken=24eec0d8c86cda1e, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Phone.Controls.Toolkit">
       <HintPath>..\packages\WPtoolkit.4.2012.10.30\lib\wp8\Microsoft.Phone.Controls.Toolkit.dll</HintPath>
