--- a/PureToneAudiometer/PureToneAudiometer.csproj
+++ b/PureToneAudiometer/PureToneAudiometer.csproj
@@ -103,14 +103,17 @@
     <Compile Include="Events.cs" />
     <Compile Include="IAsyncXmlFileManager.cs" />
     <Compile Include="IReadOnlyTraversableList.cs" />
+    <Compile Include="ISkyDriveUpload.cs" />
     <Compile Include="LocalizedStrings.cs" />
     <Compile Include="Plotting.cs" />
+    <Compile Include="StringFormatConverter.cs" />
     <Compile Include="TriggeredBooleanToVisibilityConverter.cs" />
     <Compile Include="ViewModels\Core\HearingTestViewModel.cs" />
     <Compile Include="ViewModels\Core\HostPageViewModel.cs" />
     <Compile Include="ViewModels\Core\HearingResult.cs" />
     <Compile Include="ViewModels\Core\TestResult.cs" />
     <Compile Include="ViewModels\IDialogBuilder.cs" />
+    <Compile Include="ViewModels\Live\MainLivePageViewModel.cs" />
     <Compile Include="ViewModels\MainPageViewModel.cs" />
     <Compile Include="ViewModels\Results\BrowserPageViewModel.cs" />
     <Compile Include="ViewModels\Results\ResultFileViewModel.cs" />
@@ -135,6 +138,9 @@
     </Compile>
     <Compile Include="Views\Core\HostPageView.xaml.cs">
       <DependentUpon>HostPageView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Live\MainLivePageView.xaml.cs">
+      <DependentUpon>MainLivePageView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\MainPageView.xaml.cs">
       <DependentUpon>MainPageView.xaml</DependentUpon>
@@ -195,6 +201,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Core\HostPageView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Live\MainLivePageView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -300,6 +310,9 @@
     </Reference>
     <Reference Include="Caliburn.Micro.Extensions">
       <HintPath>..\packages\Caliburn.Micro.1.5.1\lib\wp8\Caliburn.Micro.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="Coding4Fun.Toolkit.Controls">
+      <HintPath>..\packages\Coding4Fun.Toolkit.Controls.2.0.5\lib\windowsphone8\Coding4Fun.Toolkit.Controls.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Live, Version=5.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Live.Controls, Version=5.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
