--- a/PureToneAudiometer/packages.config
+++ b/PureToneAudiometer/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Caliburn.Micro" version="1.5.1" targetFramework="wp80" />
   <package id="Caliburn.Micro.BindableAppBar" version="1.0.3.0" targetFramework="wp80" />
+  <package id="Coding4Fun.Toolkit.Controls" version="2.0.5" targetFramework="wp80" />
   <package id="Rx-Core" version="2.1.30214.0" targetFramework="wp80" />
   <package id="Rx-Interfaces" version="2.1.30214.0" targetFramework="wp80" />
   <package id="Rx-Linq" version="2.1.30214.0" targetFramework="wp80" />
