--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,18 @@
+image: Visual Studio 2019 Preview
+  
+before_build:
+  - cmd: nuget restore
+
+install:
+  appveyor DownloadFile https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
+
+build:
+  project: C:\projects\PureToneAudiometer\PureToneAudiometer.sln    # path to Visual Studio solution or project
+  parallel: false                                       # enable MSBuild parallel builds
+  verbosity: normal                                     # MSBuild verbosity level (quiet|minimal|normal|detailed)
+
 after_build:
-  - 7z a PureToneAudiometer.zip %APPVEYOR_BUILD_FOLDER%\PureToneAudiometer\bin\Debug\*.*
+  - 7z a PureToneAudiometer.zip "%APPVEYOR_BUILD_FOLDER%\PureToneAudiometer\bin\Debug\*.*"
 
 artifacts:  # Archive the generated packages in the ci.appveyor.com build report.  - path: bin\Debug\*
   - path: PureToneAudiometer.zip
